# rect2dome

./: .gitignore  README.md  pyproject.toml  rect2dome.py
tests/: test_rect2dome.py
